# ouroboros

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README  TODO  modules.cc
cmake/: Lua.cmake  OuroborosConfig.cmake  OuroborosOPWIG.cmake  Python.cmake  SWIG.cmake  modules.cc.in  modules.cxx.in  opwig.cmake  opwig.cxx.in  ouroboros.cmake  wrap_helper.cmake
doxystuff/: Doxyfile.in
draft/: CPPBNF.html  SWIG-problems.txt  modules.txt  overview.txt
languages/: CMakeLists.txt
languages/lua/: CMakeLists.txt  opwig-lua.cxx
languages/lua/opa/: auxlib.h  basegear.cxx  basegear.h  bootstrapgear.cxx  bootstrapgear.h  converter.cxx  converter.h  datagear.cxx  datagear.h  defs.h  header.h  luadata.cxx  luadata.h  luamachine.cxx  luamachine.h  luamodules.cxx  modules.h  opwig-lua.cxx  primitive.h  state.h
languages/lua/opa/wrap/: function.h  module.cxx  module.h
languages/lua/opwig/: codes.cxx  codes.h  wrapperspecification.cxx  wrapperspecification.h  wrapperstate.cxx  wrapperstate.h  wraps.h
languages/python/: CMakeLists.txt  opwig-python.cxx
languages/python/opa/: modules.h  pythonconverter.cxx  pythonconverter.h  pythondata.cxx  pythondata.h  pythonmachine.cxx  pythonmodules.cxx  wrapperbase.cxx
languages/python/opwig/: pythonspecification.cxx  pythonspecification.h  utilities.cxx  utilities.h  wrapscope.cxx  wrapscope.h
opa/: CMakeLists.txt
opa/src/opa/: baseproxy.h  config.h.in  converter.h  defs.h  script.h  scriptmanager.h  virtualdata.h  virtualobj.cxx
opa/src/opa/utils/: idgenerator.cxx
opwig/: CMakeLists.txt
opwig/src/opwig/: opwig.cxx  opwig.h
opwig/src/opwig/json/: exceptions.h  reader.cxx  reader.h
opwig/src/opwig/md/: basespecifier.h  class.cxx  class.h  container.h  enum.h  function.h  metadataobject.h  namespace.h  parameter.h  scope.cxx  scope.h  type.h
opwig/src/opwig/parser/: declarator.h  declspecifier.h
src/: baseproxy.h  defs.h  initscripts.cc  langwrapper.h  lua_src_list.cmake  opwig_lua.cxx  opwig_python.cxx  py_src_list.cmake  scriptmanager.cc  scriptmanager.h  src_list.cmake  type.h  virtualdata.h  virtualobj.cc  virtualobj.h  virtualprimitive.h
src/OPA/: baseproxy.h  config.h  initscripts.cxx  langwrapper.h  scriptmanager.cxx  scriptmanager.h  type.h  virtualdata.h  virtualobj.cxx  virtualobj.h  virtualprimitive.h
src/languages/: CMakeLists.txt
src/languages/lua/: CMakeLists.txt  auxlib.h  basegear.cc  basegear.cxx  basegear.h  bootstrapgear.cxx  bootstrapgear.h  codes.cxx  codes.h  converter.cxx  converter.h  datagear.cxx  datagear.h  defs.h  header.h  luadata.cc  luadata.cxx  luadata.h  luamachine.cxx  luamachine.h  luamodules.cc  luamodules.cxx  luawrapper.cc  luawrapper.cxx  luawrapper.h  modules.h  opwig-lua.cxx  primitive.h  state.h  wrapperspecification.cxx  wrapperspecification.h  wrapperstate.cxx  wrapperstate.h  wraps.h
src/languages/lua/aux/: exportmodule.cxx  exportmodule.h
src/languages/lua/export/: exportmodule.cxx  exportmodule.h
src/languages/lua/native/: traceback.h
src/languages/lua/wrap/: function.h  helpers.h  module.cxx  module.h  pushable.h  variable.h
src/languages/python/: CMakeLists.txt  modules.h  opwig-python.cxx  pythonconverter.cxx  pythonconverter.h  pythondata.cc  pythondata.cxx  pythondata.h  pythonmachine.cxx  pythonmachine.h  pythonmodules.cc  pythonmodules.cxx  pythonspecification.cxx  pythonspecification.h  pythonwrapper.cc  pythonwrapper.cxx  pythonwrapper.h  utilities.cxx  wrapperbase.cxx  wrapperbase.h  wrapscope.cxx  wrapscope.h
src/opa/: CMakeLists.txt  baseproxy.h  config.h  config.h.in  converter.h  defs.h  exceptions.h  initscripts.cxx  langwrapper.h  module.h  script.h  scriptmanager.cxx  scriptmanager.h  type.cxx  type.h  virtualdata.h  virtualmachine.h  virtualobj.cxx  virtualobj.h  virtualprimitive.h
src/opa/type/: conversionregistry.cxx  conversionregistry.h
src/opa/utils/: idgenerator.cxx  idgenerator.h  uncopyable.h
src/opwig/: CMakeLists.txt  main.cxx  mdnamespace.cxx  mdnamespace.h  opwig.cxx  opwig.h
src/opwig/md/: accessspecifier.h  basespecifier.h  class.cxx  class.h  container.h  enum.h  function.h  metadataobject.cxx  metadataobject.h  namespace.cxx  namespace.h  nestednamespecifier.cxx  nestednamespecifier.h  parameter.h  ptr.h  scope.cxx  scope.h  semanticerror.h  type.h  variable.h
src/opwig/mdparser/: CMakeLists.txt  generate.cmake  mdparser-parse.cxx  mdparser-preincludes.h  mdparser.gr  mdparser.h  mdparser.ih  mdparserbase.h  mdscanner-lex.cxx  mdscanner.h  mdscanner.ih  mdscanner.lex  mdscannerbase.h  src.cmake
src/opwig/parser/: basespecifier.h  build.sh  declarator.h  declspecifier.h  generate.cmake  mdparser-parse.cxx  mdparser-preincludes.h  mdparser.gr  mdparser.gr.output  mdparser.h  mdparser.ih  mdparserbase.h  mdscanner-lex.cxx  mdscanner.h  mdscanner.ih  mdscanner.lex  mdscannerbase.h  parser-parse.cxx  parser.gr  parser.h  parser.ih  parserbase.h  scanner-lex.cxx  scanner.h  scanner.ih  scanner.lex  scannerbase.h  semantictypes.h  utilities.cxx  utilities.h
src/opwig/parser/grammar/: class_rules.gr  declaration_rules.gr  declarator_rules.gr  enum_rules.gr  expression_rules.gr  function_rules.gr  identifier_rules.gr  member_rules.gr  namespace_rules.gr  semantictypes.gr  toplevel_rules.gr  type_rules.gr
src/ouroboros/: baseproxy.h  config.h  config.h.in  initscripts.cc  initscripts.cxx  langwrapper.h  module.h  script.h  scriptmanager.cxx  scriptmanager.h  type.h  virtualdata.h  virtualobj.cc  virtualobj.h  virtualprimitive.h
test/: .gitignore  CMakeLists.txt  internal_utils.cmake  oldscript_test  script_test.cxx
test/acceptance/milestone-00/: CMakeLists.txt  milestone-00  script_test.cxx
test/acceptance/milestone-00/scripts/: luatalker.lua  pythontalker.py  talker.lua
test/acceptance/milestone-00/src/: main.cxx  prompt.cxx  prompt.h  script_test.cxx
test/acceptance/milestone-01/: CMakeLists.txt
test/acceptance/milestone-01/scripts/: luatalker.lua  pythontalker.py
test/acceptance/milestone-01/src/: .gitignore  input.cxx  main.cxx  out.cxx  out.h
test/wrapper/: CMakeLists.txt
www/: index.html
(+62 files in other folders)
